--- a/N53-Task1/N53Home1.csproj
+++ b/N53-Task1/N53Home1.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>N53_Task1</RootNamespace>
+    <RootNamespace>N53Home1</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
