--- a/N65.Identity.Api/N65.Identity.Api.csproj
+++ b/N65.Identity.Api/N65.Identity.Api.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\N65.Identity.Infrastructure\N65.Identity.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
