--- a/N65.Idnetity.Application/N65.Identity.Application.csproj
+++ b/N65.Idnetity.Application/N65.Identity.Application.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\N65.Identity.Domain\N65.Identity.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
